--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,3 +18,7 @@ jobs:
   timeoutInMinutes: 10
   steps:
   - bash: echo "second job"
+  - task: WhiteSource@21
+    inputs:
+      cwd: '$(System.DefaultWorkingDirectory)'
+      projectName: 'birla'
